--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
         color: black;
         margin: 0px;
         padding: 0px;
-        background: url('img.jpg');
+        background: url('../img/pexels-pixabay-163351.jpg');
         background-repeat: no-repeat;
         /*height: 00px;
         width: 500px auto;*/
